Fixed subpage image sizing on mobile

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -171,6 +171,7 @@
         .subpage-hero__img {
             clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
             height: 500px;
+            object-fit: cover;
         }
     }
 }
